[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sqlalchemy-async-seeder"
authors = [{name = "Novoseltcev Stanislav", email = "novoseltcev.stanislav@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/novoseltcev/sqlalchemy-async-seeder"
